--- a/content/data/scss/style.scss
+++ b/content/data/scss/style.scss
@@ -1,34 +1,105 @@
-$red: #E1332D;
-$white: #fff;
+.pop-up {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  @include transform(translate(-50%, -50%) scale(0.9));
+  overflow-y: auto;
+  box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.4);
+  visibility: hidden;
+  opacity: 0;
+  @include transition(all .3s);
+  z-index: 10;
+  background-color: $white;
+  width: 100%;
+  height: 100%;
 
-.btn-4 {
-  border: 1px solid !important;
-  overflow: hidden !important;
-  position: relative !important;
-
-  span {
-    z-index: 20 !important;
+  @media (min-width: 768px) {
+    width: calc(100% - 40px);
+    height: auto;
+    max-width: 900px;
   }
 
-  &:after {
-    background: #fff !important;
-    content: "" !important;
-    height: 155px !important;
-    left: -75px !important;
-    opacity: .2 !important;
-    position: absolute !important;
-    top: -50px !important;
-    transform: rotate(35deg) !important;
-    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1) !important;
-    width: 50px !important;
-    z-index: -10 !important;
-  }
-}
+  .content {
+    width: 100%;
+    max-width: 900px;
+    overflow: hidden;
+    text-align: center;
+    position: relative;
+    min-height: 100vh;
 
-.btn-4:hover {
+    @media (min-width: 768px) {
+      min-height: inherit;
+    }
 
-  &:after {
-    left: 120% !important;
-    transition: all 550ms cubic-bezier(0.19, 1, 0.22, 1) !important;
+    .container {
+      padding: 100px 20px 140px;
+
+      @media (min-width: 568px) {
+        padding: 50px 20px 80px;
+      }
+
+      @media (min-width: 768px) {
+        padding: 70px 0px 90px;
+        max-width: 520px;
+        margin: 0 auto;
+      }
+    }
+
+    .close {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      font-size: 1.1rem;
+      letter-spacing: 0.05rem;
+      color: $gray;
+      @include transition(all .4s);
+
+      &:hover {
+        cursor: pointer;
+        color: $orange;
+      }
+    }
+
+    .dots {
+      .dot {
+        position: absolute;
+        border-radius: 100%;
+        z-index: 11;
+
+        &:nth-of-type(1) {
+          top: -80px;
+          right: -80px;
+          width: 160px;
+          height: 160px;
+          background-color: $blue;
+          @include animation(float 6s ease-in-out infinite);
+
+          @media (min-width: 768px) {
+            top: -190px;
+            right: -190px;
+            width: 380px;
+            height: 380px;
+          }
+        }
+
+        &:nth-of-type(2) {
+          bottom: -120px;
+          left: -120px;
+          width: 240px;
+          height: 240px;
+          background-color: $orange;
+          @include animation(float 8s ease-in-out infinite);
+        }
+
+        &:nth-of-type(3) {
+          bottom: -50px;
+          right: -50px;
+          width: 100px;
+          height: 100px;
+          background-color: $yellow;
+          @include animation(float 4s ease-in-out infinite);
+        }
+      }
+    }
   }
 }
