--- a/content/data/css/custom.css
+++ b/content/data/css/custom.css
@@ -1,14 +1,213 @@
-.pop-up {
+html {
+  scroll-behavior: smooth
+}
+
+
+.mauticform-errormsg {
+  display: block;
+  color: red;
+  margin-top: 2px;
+}
+
+.cc-btn {
+  background-color: transparent !important;
+  color: white !important;
+  border: 2px solid white !important;
+}
+
+.cc-btn:hover {
+  text-decoration: none;
+}
+
+.cc-link {
+  color: #fff !important;
+}
+
+.cc-color-override--1588655054.cc-window,
+.cc-link {
+  color: #fff;
+  background-image: url(/content/data/images/data-bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+  font-size: 20px;
+  font-family: "Barlow Condensed";
+}
+
+/* COLOCAR TODAS AS DIV COM UM TAMANHO DE 768PX */
+.title-accordion {
+  margin-top: 5%;
+  margin-left: 20%;
+}
+
+.icone-check {
+  display: contents;
+  color: green;
+  margin-left: 50%;
+  font-size: 60px !important;
+}
+
+.icone-x {
+  display: solid;
+  color: red;
+  margin-top: -2%;
+  margin-left: -3%;
+  font-size: 40px !important;
+}
+
+.section-accordion {
+  color: #fff !important;
+  border: none !important;
+  font-size: 23px !important;
+  font-family: teko !important;
+}
+
+.answer-accordion {
+  color: white;
+  font-size: 20px;
+  font-family: "Barlow Condensed";
+  background-color: transparent !important;
+}
+
+.icon-accordion {
+  color: #fff !important;
+}
+
+/*.fundo-teste {
+background-image: url(content/data/images/bg-sign-up.png);
+background-repeat: no-repeat;
+background-position: left !important;
+background-size: 40%;
+
+}*/
+
+.section_wrapper {
+  min-height: 768px;
+}
+
+.alinhamento-sign-up {
+  margin-left: -5%;
+  text-align: center;
+}
+
+.alinhamento-contact {
+  text-align: center;
+  margin-left: 20%;
+}
+
+.space-title-content {
+  margin-top: 15%;
+}
+
+.input-sign-up {
+  height: 65px;
+  border-radius: 30px !important;
+  font-size: 25px !important;
+  font-family: Barrlow Condesed;
+  padding-left: 8% !important;
+  color: #0d0f39 !important;
+}
+
+.icon-sign-up {
   position: absolute;
-  top: 50%;
-  left: 50%;
+  font-size: 30px;
+  margin-top: 1.7%;
+  margin-left: 1%;
+  color: #0d0f39;
+}
+
+.btn-sign-up {
+  width: 140px !important;
+  height: 60px;
+  padding-left: 10% !important;
+}
+
+.contactform {
+  margin-top: 10%;
+}
+
+.input-contact {
+  border-radius: 30px !important;
+  font-size: 15px !important;
+  font-family: Barrlow Condesed;
+  padding-left: 4% !important;
+  color: #0d0f39 !important;
+}
+
+.input-contact-mensage {
+  border-radius: 30px !important;
+  height: 150px;
+  font-size: 15px !important;
+  font-family: Barrlow Condesed;
+  padding-left: 4% !important;
+  color: #0d0f39 !important;
+}
+
+::-webkit-input-placeholder {
+  padding-left: 3%;
+  color: #0D0F39;
+}
+
+.btn-contact {
+  width: 150px !important;
+  height: 70px;
+  padding-left: 3% !important;
+  margin-top: 10%;
+  color: #fff !important;
+  font-size: 25px !important;
+  font-family: teko !important;
+}
+
+.btn-contact:hover {
+  color: white !important;
+  border-color: white !important;
+  background-color: #0D0F39 !important;
+}
+
+.title-sign-up {
+  margin-left: 25%;
+}
+
+.title-contact {
+  margin-left: 30%;
+}
+
+.button {
+  font-size: 1em;
+  padding: 10px;
+  color: #fff;
+  border: 2px #06D85F;
+  border-radius: 20px/50px;
+  text-decoration: none;
+  cursor: pointer;
+  transition: all 0.3s ease-out;
+}
+
+.button:hover {
+  background: #06D85F;
+}
+
+.icon-contact {
+  position: absolute;
+  margin-top: 0.5%;
+  margin-left: 1%;
+  color: #0d0f39;
+  font-size: 20px;
+}
+
+.pop-up {
+  position: fixed;
+  top: 40%;
+  left: 15%;
   overflow-y: auto;
   box-shadow: 0px 6px 30px rgba(0, 0, 0, 0.4);
   visibility: hidden;
   opacity: 0;
   z-index: 10;
-  width: 100%;
-  height: 100%;
+  width: 30%;
+  height: 30%;
+  background-color: #0D0F39;
 }
 
 @media (min-width: 768px) {
@@ -21,11 +220,9 @@
 
 .pop-up .content {
   width: 100%;
-  max-width: 900px;
   overflow: hidden;
   text-align: center;
-  position: relative;
-  min-height: 100vh;
+
 }
 
 @media (min-width: 768px) {
@@ -98,4 +295,79 @@
   right: -50px;
   width: 100px;
   height: 100px;
+}
+
+.pop-up .content .title h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 2.8rem;
+  letter-spacing: 0.05rem;
+}
+
+.pop-up .content img {
+  width: 100%;
+  max-width: 220px;
+  display: inline-block;
+  margin: 30px 0 40px 0;
+  opacity: 0;
+}
+
+@media (min-width: 768px) {
+  .pop-up .content img {
+    max-width: 300px;
+  }
+}
+
+.pop-up .content .subscribe h1 {
+  font-size: 1.5rem;
+  line-height: 130%;
+  letter-spacing: 0.07rem;
+  margin-bottom: 30px;
+}
+
+.pop-up .content .subscribe form {
+  overflow: hidden;
+}
+
+.pop-up .content .subscribe form input {
+  width: 100%;
+  float: left;
+  padding: 15px 20px;
+  text-align: center;
+  font-family: inherit;
+  font-size: 1.1rem;
+  letter-spacing: 0.05rem;
+  outline: 0;
+}
+
+.pop-up .content .subscribe form input[type=email] {
+  margin-bottom: 15px;
+}
+
+@media (min-width: 768px) {
+  .pop-up .content .subscribe form input[type=email] {
+    margin-bottom: 0px;
+    width: 75%;
+    border-right-width: 0px;
+  }
+}
+
+@media (min-width: 768px) {
+  .pop-up .content .subscribe form input[type=submit] {
+    width: 25%;
+  }
+}
+
+.pop-up .content .subscribe form input[type=submit]:hover {
+  cursor: pointer;
+}
+
+.pop-up.open {
+  visibility: visible;
+  opacity: 1;
+}
+
+.pop-up.open img {
+  opacity: 1;
 }
